# SomniAI

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  do.sh
.github/workflows/: moji_curl-ci.yml
MoJI/: .eslintrc.js  .gitignore  Fresh_Creation.sh  README.md  app.json  babel.config.js  build.sh  clean.sh  clean_build.sh  index.js  light_build.sh  package-lock.json  package.json
MoJI/Docker/: Dockerfile
MoJI/android/: build.gradle  settings.gradle
MoJI/android/app/: build.gradle
MoJI/android/app/main/cpp/: moji-send-frame.h
MoJI/android/app/src/main/: AndroidManifest.xml
MoJI/android/app/src/main/cpp/: CMakeLists.txt  cpp-installer.cpp  moji-fast-streaming.cpp  moji-fast-streaming.h  moji-send-frame.cpp  moji-send-frame.h
MoJI/cpp/: FastStreaming.cpp  MOJIStreamingPlugin.cpp  MoJISocket.cpp  moji-fast-streaming.cpp  moji-fast-streaming.h  moji-send-frame.cpp  moji-send-frame.h  send-http.cpp  send-http.h
MoJI/curl/: build.sh  build_curl.sh  build_openssl.sh
MoJI/curl/curl-for-andorid/lib/pkgconfig/: libcurl.pc
MoJI/curl/curl-for-andorid/share/man/man1/: runtests.1
MoJI/curl/curl-for-andorid/share/man/man3/: CURLINFO_CONNECT_TIME_T.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_NUM_CONNECTS.3  CURLINFO_PROXY_SSL_VERIFYRESULT.3  CURLINFO_REDIRECT_TIME.3  CURLINFO_REDIRECT_URL.3  CURLINFO_RTSP_CLIENT_CSEQ.3  CURLINFO_RTSP_SERVER_CSEQ.3  CURLINFO_SCHEME.3  CURLINFO_SSL_ENGINES.3  CURLINFO_TOTAL_TIME_T.3  CURLINFO_USED_PROXY.3  CURLMOPT_CHUNK_LENGTH_PENALTY_SIZE.3  CURLMOPT_MAX_TOTAL_CONNECTIONS.3  CURLMOPT_PIPELINING.3  CURLOPT_AUTOREFERER.3  CURLOPT_AWS_SIGV4.3  CURLOPT_BUFFERSIZE.3  CURLOPT_CAINFO.3  CURLOPT_CAINFO_BLOB.3  CURLOPT_CAPATH.3  CURLOPT_CA_CACHE_TIMEOUT.3  CURLOPT_CLOSESOCKETDATA.3  CURLOPT_CONV_FROM_NETWORK_FUNCTION.3  CURLOPT_COPYPOSTFIELDS.3  CURLOPT_DEBUGDATA.3  CURLOPT_DNS_INTERFACE.3  CURLOPT_DOH_SSL_VERIFYHOST.3  CURLOPT_DOH_SSL_VERIFYPEER.3  CURLOPT_FAILONERROR.3  CURLOPT_FORBID_REUSE.3  CURLOPT_FRESH_CONNECT.3  CURLOPT_FTP_USE_PRET.3  CURLOPT_HAPROXYPROTOCOL.3  CURLOPT_HEADERDATA.3  CURLOPT_HEADERFUNCTION.3  CURLOPT_HSTSREADFUNCTION.3  (+65 more)
MoJI/curl/curl-for-android/lib/cmake/CURL/: CURLConfig.cmake  CURLTargets.cmake
MoJI/curl/curl-for-android/share/man/man1/: curl-config.1  wcurl.1
MoJI/curl/curl-for-android/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CERTINFO.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_COOKIELIST.3  CURLINFO_FILETIME_T.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTPAUTH_USED.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_LOCAL_PORT.3  CURLINFO_NAMELOOKUP_TIME.3  CURLINFO_OS_ERRNO.3  CURLINFO_POSTTRANSFER_TIME_T.3  CURLINFO_PRETRANSFER_TIME.3  CURLINFO_PRIMARY_PORT.3  CURLINFO_PROTOCOL.3  CURLINFO_PROXYAUTH_AVAIL.3  CURLINFO_PROXYAUTH_USED.3  CURLINFO_QUEUE_TIME_T.3  CURLINFO_REDIRECT_COUNT.3  CURLINFO_REDIRECT_TIME_T.3  CURLINFO_REFERER.3  CURLINFO_REQUEST_SIZE.3  (+231 more)
MoJI/curl/openssl-for-andorid/include/openssl/: core_names.h  safestack.h  x509.h
MoJI/curl/openssl-for-andorid/lib/pkgconfig/: openssl.pc
MoJI/curl/openssl-for-android/include/openssl/: cms.h  configuration.h  crypto.h  opensslv.h  pkcs12.h  ssl.h
MoJI/curl/openssl-for-android/lib/pkgconfig/: libcrypto.pc
MoJI/curl/scripts/: build_curl.sh  build_openssl.sh  install_ndk.sh
MoJI/ios/: Podfile
MoJI/ios/MoJI/: AppDelegate.mm  AppDelegate.swift  Info.plist  LaunchScreen.storyboard
MoJI/ios/MoJI.xcodeproj/: project.pbxproj
MoJI/ios/MoJI.xcodeproj/xcshareddata/xcschemes/: MoJI.xcscheme
MoJI/ios/MoJITests/: MoJITests.m
MoJI/scripts/: install_ndk.sh  install_sdk.sh
MoJI/src/: App.tsx  CameraPage.tsx  Routes.tex  Routes.ts
android_app/: app.js
app/: README.md
app/fastapi/: main.py
app/fastapi/AI/: __init__.py  dataset.py  loader.py  predict.py
app/fastapi/SomniAI/: __init__.py  config.py  process.py
app/fastapi/utils/: __init__.py  print.py
app/fastapi/uvicorn/: main.py
app/fastapi/uvicorn/utils/: image.py  log.py
app/go/: SomniAI.proto  gen.sh  go.mod  main.go  requirements.sh  tcp_connect.go
app/go/http_1_1/: process.go
app/go/http_2/: config.go  process.go
app/go/http_2/proto/: SomniAI.pb.go
app/go/proto/: SomniAI_grpc.pb.go
data/: download_data.py  download_ieee_vip_cup_2021.py  load_custom_data.py  load_ieee_vip_cup_2021.py
data/converted-ieee-vip-cup-2021/: vipcup2021_coco.json  vipcup2021_coco_train.json  vipcup2021_coco_val.json
mmpose/: run_train.sh
mmpose/configs/_base_/datasets/: ieee_vip_cup_2021.py
mmpose/configs/vitpose/: vitpose_b.py
mmpose/docker/: docker-compose.yaml  install.sh  refresh.sh  run.sh
mmpose/docker/pose/: Dockerfile
mmpose/mmpose/codecs/: __init__.py  decoupled_heatmap.py
mmpose/mmpose/codecs/utils/: __init__.py
mmpose/mmpose/core/: __init__.py
mmpose/mmpose/core/evaluation/: __init__.py
mmpose/mmpose/core/post_processing/: __init__.py
mmpose/mmpose/datasets/datasets/: __init__.py  base_ieee_vip_cup_2021_dataset.py  ieee_vip_cup_2021_dataset.py
mmpose/mmpose/datasets/transforms/: __init__.py  topdown_transforms.py
mmpose/mmpose/evaluation/metrics/: __init__.py  ieee_vip_cup_2021_metric.py
mmpose/mmpose/models/backbones/: __init__.py  hrnet.py  resnet.py  vit.py
mmpose/mmpose/models/heads/: __init__.py
mmpose/mmpose/models/heads/heatmap_heads/: __init__.py  topdown_heatmap_base_head.py  topdown_heatmap_simple_head.py
mmpose/mmpose/models/losses/: __init__.py  mse_loss.py
mmpose/mmpose/models/pose_estimators/: topdown.py
mmpose/mmpose/visualization/: __init__.py
server/: main.py
server/AI/: __init__.py  predict.py
tester/: test.py
tests/: README.md  test.py
tests/MoJI/: CMakeLists.txt  build.sh  main.cpp  main.h
tests/server/: __init__.py  adapters.py  config.py  ports.py  tensor.py
tests/utils/: image.py  request.py
(+150 files in other folders)
